<resources>
    <string name="app_name">VisitKorea</string>
    <string name="category_places">Places</string>
    <string name="category_food">Food</string>
    <string name="category_hotel">Hotel</string>
    <string name="category_shopping">Shopping</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="address">Address</string>

    <!-- Item for places (Lotte World)-->
    <string name="place_world_name">Lotte World</string>
    <string name="place_world_description">Lotte World is the perfect spot for entertainment
     and sightseeing for Koreans and international tourists alike."</string>
    <string name="place_world_address">240 Olympic-ro,Jamsil-dong,Seoul</string>
    <string name="place_world_hours">Mon-Sat 09:30-2300(Sundays closed)</string>
    <string name="place_world_phone">+82-2411-2000</string>
    <!-- Item for places (Bukchon Hanok Village)-->
    <string name="place_village_name">Bukchon Hanok Village</string>
    <string name="place_village_description">Surrounded by Gyeongbokhung Palace,
     Changdeokgung Palace and Jongmyo Shrine, Bukchon Hanok Village is home to hundreds of
     traditional houses, called Hanok.</string>
    <string name="place_village_address">37, Gyedong-gil, Jongno-gu,Seoul</string>
    <string name="place_village_hours">Mon-Sun 0900-1800</string>
    <string name="place_village_phone">+82-22148-4160</string>
    <!-- Item for places (Cheonggyecheon Stream and Cheonggye Plaza)-->
    <string name="place_plaza_name"> Cheonggyecheon Stream And Cheonggye Plaza</string>
    <string name="place_plaza_description">Chenggyecheon Stream existed only as a neglected
     waterway hidden by an overpass, it has been transformed into a haven of natural beauty
      amidst the bustle of city life.</string>
    <string name="place_plaza_address">Taepyeong-ro 1-ga, Jung-gu, Seoul</string>
    <string name="place_plaza_hours">Open 24 hours</string>
    <string name="place_plaza_phone">+82 2-2290-7111</string>
    <!-- Item for places(Dongdaemun-Gate (Heunginjimun Gate))-->
    <string name="place_gate_name">Dongdaemun-Gate(Heunginjimun Gate)</string>
    <string name="place_gate_description">Heunginjimun Gate was built to protect Hanseongbu,
     which historically housed important government facilities.</string>
    <string name="place_gate_address"> Changsin 1(il)-dong, Seoul</string>
    <string name="place_gate_hours">Open all year round</string>
    <string name="place_gate_phone">+82-2-2-2148-1822</string>
    <!-- Item for restaurant(Gogung-Myeongdong Branch)-->
    <string name="food_gogung_name">Gogung-Myeongdong Branch</string>
    <string name="food_gogung_description">Jeongju traditional bibimbap(Jeongju-style bibimbap)</string>
    <string name="food_gogung_address">37, Myeongdong 8ga-gil, Jung-gu, Seoul</string>
    <string name="food_gogung_hours">Mon-Sun 10:00-23:00</string>
    <string name="food_gogung_phone">+82 2-776-3211</string>
    <!-- Item for restaurant(SamKim)-->
    <string name="food_kim_name">SamKim</string>
    <string name="food_kim_description">Samgyeopsal(grilled pork belly)</string>
    <string name="food_kim_address">35, Myeongdong 8ga-gil,Jung-gu, Seoul</string>
    <string name="food_kim_hours">Mon-Sun 11:00-23:00</string>
    <string name="food_kim_phone">+82-2-771-5025</string>
    <!-- Item for restaurant(The Jincook-Hongdae Branch)-->
    <string name="food_jin_name">The Jincook-Dongdaemun Station</string>
    <string name="food_jin_description">Suyuk gukbap,naengmyeo with charbroiled beef</string>
    <string name="food_jin_address">1, Jong-ro 46-gil, Jongno-gu, Seoul</string>
    <string name="food_jin_hours">Open 24 hours</string>
    <string name="food_jin_phone">+82 2-741-9882</string>
    <!-- Item for restaurant(Korea Samgyetang)-->
    <string name="food_sam_name">Korea Samgyetang</string>
    <string name="food_sam_description">Samgye-tang(ginseng chicken soup)</string>
    <string name="food_sam_address">1,Seosomum 11-gil,Jung-gu,Seoul</string>
    <string name="food_sam_hours">Open 24 hours</string>
    <string name="food_sam_phone">+82-2-2-322-5888</string>
    <!-- Item for shopping Store(Namdaeun Market)-->
    <string name="shop_market_name">Namdaeun Market</string>
    <string name="shop_market_description">Namdaeun Market is the largest traditonal market in Korea
     with shops selling various goods.</string>
    <string name="shop_market_address">21, Namdaemunsijang 4-gil, Jung-gu, Seoul</string>
    <string name="shop_market_hours">Mon-Fri 23:00-17:00 (the next day) Closed Sundays</string>
    <string name="shop_market_phone">+82-2-753-2805</string>
    <!-- Item for shopping Store(Lotte Department Store)-->
    <string name="shop_lotte_name">Lotte Department Store</string>
    <string name="shop_lotte_description">The main branch of Lotte Department Store is the leader
     in the Korean shopping culture and industry.</string>
    <string name="shop_lotte_address">81, Namdaemun-ro, Jung-gu, Seoul</string>
    <string name="shop_lotte_hours">Mon-Sun 10:00–2030</string>
    <string name="shop_lotte_phone">+82 2-771-2500</string>
    <!-- Item for shopping Store(Itaweon Shops Street)-->
    <string name="shop_itaweon_name">Itaweon Shopping Street</string>
    <string name="shop_itaweon_description">Itaweon Street is the most exotic place in Seoul to
    spend a day of shopping,dining,and hanging out.</string>
    <string name="shop_itaweon_address">Itaweon-dong,Yongsan-gu, Seoul</string>
    <string name="shop_itaweon_hours">Mon-Sun 09:00-21:00(varies by shop)</string>
    <string name="shop_itaweon_phone">+82-2-797-7319</string>
    <!-- Item for shopping Store(Hyundai Department Store)-->
    <string name="shop_hyundai_name">Hyundai Department Store</string>
    <string name="shop_hyundai_description">located in the COEX, one of the largest business and
    financial district in Korea.</string>
    <string name="shop_hyundai_address">517, Teheran-ro, Gangnam-gu Seoul</string>
    <string name="shop_hyundai_hours">Mon-Sun 10:30-20:00</string>
    <string name="shop_hyundai_phone">+82-2-552-2233></string>
    <!-- Item for accommodations(Hotelette Seoul Station)-->
    <string name="hotel_hotelette_name">Hotelette Seoul Station</string>
    <string name="hotel_hotelette_description">Unassuming hotel near Seoul Station.</string>
    <string name="hotel_hotelette_address">11 Huam-ro 60-gil, Hoehyeon-dong, Jung-gu, Seoul</string>
    <string name="hotel_hotelette_hours">Open 24 hours  </string>
    <string name="hotel_hotelette_phone">+82-2-318-1037</string>
    <!-- Item for accommodations(Myeongdong Guesthouse)-->
    <string name="hotel_guesthouse_name">Myeongdong Guesthouse</string>
    <string name="hotel_guesthouse_description">Near Namdaemun Market, Mamsan Seoul Tower,
    and Cheonggyecheon Stream.</string>
    <string name="hotel_guesthouse_address">12, Toegye-ro 24 gil, Jung-gu, Seoul</string>
    <string name="hotel_guesthouse_hours">Open 24 hours</string>
    <string name="hotel_guesthouse_phone">+82-2-755-5436</string>
    <!-- Item for accommodations(Lotte Hotel World)-->
    <string name="hotel_lotte_name">Lotte Hotel World</string>
    <string name="hotel_lotte_description">Located inside the Lotte World Theme Park complex.</string>
    <string name="hotel_lotte_address">240, Olympic-ro, Songpa-gu, Seoul</string>
    <string name="hotel_lotte_hours">Open 24 hours</string>
    <string name="hotel_lotte_phone">+82-22-411-7777</string>
    <!-- Item for accommodations(Ibis Ambassador Myeongdong)-->
    <string name="hotel_ibis_name">Ibis Ambassador Myeongdong</string>
    <string name="hotel_ibis_description">The heart of the business and shopping districts in Myeongdong.</string>
    <string name="hotel_ibis_address">78, Namdaemunro, Jung-gu, Seoul</string>
    <string name="hotel_ibis_hours">Open 24 hours</string>
    <string name="hotel_ibis_phone">+82-2-6272-1101</string>
    <string name="phone">phone</string>
    <string name="hours">hours</string>


    <!--&lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;
    <string name="hello_blank_fragment">Hello blank fragment</string>-->
</resources>
